--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>jenesis</title>
+    <title>Genesis</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="css/reset.css">
