--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
                                           <span class="contentTop1">GENESIS</span>
                                           <span class="contentTopBig"> G90</span>
                                       </div>
-                                      <p><span class="contentTop3">한국자동차기자협회 2022년 올해의 차 수상</span></p>
+                                      <p><span class="contentTop3">한국자동차기자협회<br> 2022년 올해의 차 수상</span></p>
                                   </div>
                                   <div class="contentBottom">
                                       <div class="basicBtn blackText"><a href="#"><span class="white">더 알아보기</span></a><em class="white"></em></div>
@@ -1321,9 +1321,6 @@
                 </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-
-
-
       </div>
       <div class="fifth-content">
           <div class="fifth-wrap">
@@ -1352,7 +1349,7 @@
                            <!--  <img src="./img/genesis-kr-main-motortrend-award-22-desktop-1920x960.jpg" alt="main2"> -->
                             <div class="fifth-inner">
                                 <p class="fifth-tocontentTop3">
-                                    제네시스 GV70, 모터트렌드 올해의 SUV® 선정 
+                                    제네시스 GV70,모터트렌드 올해의 SUV®선정 
                                 </p>
                                 <p class="fifth-text">
                                     제네시스 GV70가 미국 최고 권위의 자동차 전문지 모터트렌드에서 디자인, 엔지니어링, 효율성, 안전 등 모든 부문에서 우수한 평가를 받으며 2022 모터트렌드 올해의 SUV®(미국 사양 기준)로 최종 선정되었습니다. 
@@ -1366,7 +1363,7 @@
                            <!--  <img src="./img/fifth_slide3big.jpg" alt="main3"> -->
                             <div class="fifth-inner">
                                 <p class="fifth-tocontentTop3">
-                                    GV60, 레드닷 어워드 제품 디자인 분야 본상 수상
+                                    GV60, 레드닷 어워드 제품디자인분야 본상 수상
                                 </p>
                                 <p class="fifth-text">
                                     독일 노르트라인 베스트팔렌 디자인센터(Design Zentrum Nordrhein Westfalen)가 주관하는 ‘2022 레드 닷 어워드(2022 Red Dot Award): 제품 디자인’ 에서 제네시스 브랜드 최초의 전용 전기차 모델인 GV60가 본상(Winner)을 수상하였습니다.
