--- a/index.html
+++ b/index.html
@@ -1420,6 +1420,42 @@
             </div>
           </div>         
       </div><!-- fifth-content -->
+      <div class="sixth-content">
+          <div class="container sixth-flex">
+              <div class="sixth-box1">
+                  <div class="sixth-img">
+                      <img src="./img/box1.webp" alt="jenesisphoto">
+                  </div>
+                  <div class="sixth-texts">
+                      <p class="sixth-tx1">
+                          <span>스페이스</span>
+                      </p>
+                      <p class="sixth-tx2">
+                        제네시스의 디자인과 고유한 감각을 반영한 현대적 공간으로 여러분을 초대합니다. 제네시스에 관한 다양한 체험으로 당신만의 제네시스를 찾는 여정을 지원합니다.
+                      </p>
+                      <div class="sixth-tx3">
+                          <a href="#"><span class="six-position1">자세히 보기</span></a>
+                      </div>
+                  </div>
+              </div>
+              <div class="sixth-box1">
+                 <div class="sixth-img">
+                     <img src="./img/box2.webp" alt="jenesisphoto">
+                 </div>
+                 <dis class="sixth-texts">
+                     <p class="sixth-tx1">
+                         <span>로드트랩</span>
+                     </p>
+                     <p class="sixth-tx2">
+                         제네시스와 내셔널지오그래픽 트래블러와  함께하는 서사적 여행, 제네시스  로드트립을 통해 자세한 정보를  확인하세요.
+                     </p>
+                     <div class="sixth-tx3">
+                         <a href="#"><span class="six-position2">자세히 보기</span></a>
+                     </div>
+                 </dis>
+              </div>
+          </div>
+      </div>
    </div><!-- wrap -->
    <!-- Swiper JS -->
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
